manifests/namespaces/istio-system/envoyfilter/1.9/ratelimit-global-public-gateway-1.9-ef.yaml
# this is a global ratelimit applying on the gateway side
# this will apply to all istio-ingressgateway pod

# this will apply to all istio-ingressgateway pod
# DO NOT EDIT THIS FILE!
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: ratelimit-global-public-gateway-1.9-ef
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      app: istio-public-gateway
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: GATEWAY
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
      proxy:
        proxyVersion: ^1\.9.*
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.ratelimit
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimit
          domain: gateway_rate_limit
          failure_mode_deny: true
          rate_limit_service:
            grpc_service:
              envoy_grpc:
                cluster_name: rate_limit_cluster
              timeout: 10s
            transport_api_version: V3
  - applyTo: CLUSTER
    match:
      cluster:
        service: ratelimit.infrastructure.svc.cluster.local
    patch:
      operation: ADD
      # Adds the rate limit service cluster for rate limit service defined in step 1.
      value:
        name: rate_limit_cluster
        type: STRICT_DNS
        connect_timeout: 10s
        lb_policy: ROUND_ROBIN
        http2_protocol_options: {}
        load_assignment:
          cluster_name: rate_limit_cluster
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                    socket_address:
                      address: ratelimit.infrastructure.svc.cluster.local
                      port_value: 8081
# this is a patched service for ratelimit service
# this will apply to all istio-ingressgateway pod
# DO NOT EDIT THIS FILE!
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: EnvoyFilter
# metadata:
#   name: ratelimit-global-public-gateway-patch-1.9-ef
#   namespace: istio-system
# spec:
#   workloadSelector:
#     labels:
#       app: istio-public-gateway
#   configPatches:
#   - applyTo: CLUSTER
#     match:
#       cluster:
#         service: ratelimit.infrastructure.svc.cluster.local
#       proxy:
#         proxyVersion: ^1\.9.*
#     patch:
#       operation: MERGE
#       value:
#         name: "patched.ratelimit.infrastructure.svc.cluster.local"
