manifests/namespaces/istio-system/envoyfilter/1.9/ratelimit-helloworld-zufardhiyaulhaq-dev-gateway-helloworld-zufardhiyaulhaq-dev-vs-ratelimit-examples-helloworld-v1-default-route-1.9-ef.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: ratelimit-helloworld-zufardhiyaulhaq-dev-gateway-helloworld-zufardhiyaulhaq-dev-vs-ratelimit-examples-helloworld-v1-default-route-1.9-ef
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      app: istio-public-gateway
  configPatches:
  - applyTo: HTTP_ROUTE
    match:
      context: GATEWAY
      routeConfiguration:
        vhost:
          name: "helloworld.zufardhiyaulhaq.dev:443"
          route:
            name: "ratelimit-examples-helloworld-v1-default-route"
            action: ANY
      proxy:
        proxyVersion: ^1\.9.*
    patch:
      operation: MERGE
      value:
        route:
          rate_limits:
          - actions:
            - request_headers:
                header_name: ":method"
                descriptor_key: "header-method-rule-helloworld-zufardhiyaulhaq-dev-gateway-helloworld-zufardhiyaulhaq-dev-vs-ratelimit-examples-helloworld-v1-default-route"
            - request_headers:
                header_name: "X-Path-Without-Parameter"
                descriptor_key: "header-x-path-without-parameter-rule-helloworld-zufardhiyaulhaq-dev-gateway-helloworld-zufardhiyaulhaq-dev-vs-ratelimit-examples-helloworld-v1-default-route"
